--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@ body {
     background-size: cover; 
 }
 
+
+
 .main-container{
     margin: auto;
     background-image: url(../images/confetti.svg);
@@ -25,9 +27,13 @@ body {
     color: #696969;
     text-align: left;
     font-size: 12px;
-    width: 355px;
+    width: 360px;
     margin: auto;
     padding:5px;
+}
+
+.bio > p {
+    margin:0px;
 }
 
 .profile-name{
